[gd_scene load_steps=22 format=2]

[ext_resource path="res://scene/mainui.gd" type="Script" id=1]
[ext_resource path="res://image/pause.png" type="Texture" id=2]
[ext_resource path="res://scene/Popup.tscn" type="PackedScene" id=3]
[ext_resource path="res://image/back.png" type="Texture" id=4]
[ext_resource path="res://image/nextl.png" type="Texture" id=5]
[ext_resource path="res://image/crosss.png" type="Texture" id=6]
[ext_resource path="res://image/invisiblehold.png" type="Texture" id=7]
[ext_resource path="res://image/invisible.png" type="Texture" id=8]
[ext_resource path="res://image/levelcomplete.png" type="Texture" id=9]
[ext_resource path="res://image/starcolor.png" type="Texture" id=10]
[ext_resource path="res://image/retry.png" type="Texture" id=11]
[ext_resource path="res://image/player.png" type="Texture" id=12]
[ext_resource path="res://image/loseimage.png" type="Texture" id=13]
[ext_resource path="res://scene/admob.tscn" type="PackedScene" id=14]

[sub_resource type="Animation" id=1]

resource_name = "New Anim"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.348078 ), Color( 1, 1, 1, 0.994471 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "New Anim"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("star1:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("star1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.629843 ), Color( 1, 1, 1, 0.988941 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "New Anim (2)"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("star2:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.585647 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("star2:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.7, 0.7 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "New Anim (3)"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("star3:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("star3:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.646392 ), Color( 1, 1, 1, 0.994471 ) ]
}

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.4, 0.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.541451 ), Color( 1, 1, 1, 0.994471 ) ]
}

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 35, 100 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 40, 100 )

[node name="mainui" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer" index="0"]

position = Vector2( 0, 2.00002 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 2 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Popup" parent="CanvasLayer" index="1" instance=ExtResource( 3 )]

visible = false

[node name="back" type="TouchScreenButton" parent="CanvasLayer/Popup" index="1"]

modulate = Color( 0.992188, 0.976685, 0.976685, 1 )
position = Vector2( 98, 331 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Popuplevel" parent="CanvasLayer" index="2" instance=ExtResource( 3 )]

visible = false

[node name="changelevel" type="TouchScreenButton" parent="CanvasLayer/Popuplevel" index="1"]

position = Vector2( 98, 330 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="cross" type="TouchScreenButton" parent="CanvasLayer/Popuplevel" index="2"]

position = Vector2( 178, 149 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="anim" type="Node2D" parent="CanvasLayer/Popuplevel" index="3"]

position = Vector2( 0, 110 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="CanvasLayer/Popuplevel/anim" index="0"]

position = Vector2( 114, 146 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite2" type="Sprite" parent="CanvasLayer/Popuplevel/anim" index="1"]

position = Vector2( 109, 138 )
scale = Vector2( 0.17, 0.17 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite3" type="Sprite" parent="CanvasLayer/Popuplevel/anim" index="2"]

position = Vector2( 127, 146 )
rotation = -0.311547
scale = Vector2( 0.17, 0.17 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite4" type="Sprite" parent="CanvasLayer/Popuplevel/anim" index="3"]

position = Vector2( 119, 154 )
rotation = 0.382201
scale = Vector2( 0.17, 0.17 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite5" type="Sprite" parent="CanvasLayer/Popuplevel/anim" index="4"]

position = Vector2( 99, 147 )
rotation = -0.377155
scale = Vector2( 0.17, 0.17 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite2" type="Sprite" parent="CanvasLayer/Popuplevel" index="4"]

modulate = Color( 1, 1, 1, 0.994471 )
position = Vector2( 115, 195 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Popuplevel" index="5"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
"anims/New Anim" = SubResource( 1 )
blend_times = [  ]

[node name="star" type="Node2D" parent="CanvasLayer/Popuplevel" index="6"]

position = Vector2( 2, 0 )
_sections_unfolded = [ "Transform" ]

[node name="star1" type="Sprite" parent="CanvasLayer/Popuplevel/star" index="0"]

modulate = Color( 1, 1, 1, 0.988941 )
position = Vector2( 85, 291 )
scale = Vector2( 1e-005, 1e-005 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="star3" type="Sprite" parent="CanvasLayer/Popuplevel/star" index="1"]

modulate = Color( 1, 1, 1, 0.646392 )
position = Vector2( 135, 291 )
scale = Vector2( 1e-005, 1e-005 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="star2" type="Sprite" parent="CanvasLayer/Popuplevel/star" index="2"]

modulate = Color( 1, 1, 1, 0.585647 )
position = Vector2( 110, 291 )
scale = Vector2( 1e-005, 1e-005 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Popuplevel/star" index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
"anims/New Anim" = SubResource( 2 )
"anims/New Anim (2)" = SubResource( 3 )
"anims/New Anim (3)" = SubResource( 4 )
blend_times = [  ]

[node name="Popuprestart" parent="CanvasLayer" index="3" instance=ExtResource( 3 )]

visible = false

[node name="Sprite" parent="CanvasLayer/Popuprestart" index="0"]

visible = false

[node name="retry" type="TouchScreenButton" parent="CanvasLayer/Popuprestart" index="1"]

position = Vector2( 63, 307 )
scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 11 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="backtoui" type="TouchScreenButton" parent="CanvasLayer/Popuprestart" index="2"]

position = Vector2( 118, 306 )
scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Popupdied" parent="CanvasLayer" index="4" instance=ExtResource( 3 )]

visible = false
margin_left = 1.0
margin_top = 2.0
margin_right = 41.0
margin_bottom = 42.0

[node name="Sprite" parent="CanvasLayer/Popupdied" index="0"]

position = Vector2( 8, -1 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer/Popupdied" index="1"]

position = Vector2( 114, 277 )
rotation = 0.294103
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 12 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Sprite3" type="Sprite" parent="CanvasLayer/Popupdied" index="2"]

modulate = Color( 1, 1, 1, 0.541451 )
position = Vector2( 114, 226 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 13 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="backretry" type="TouchScreenButton" parent="CanvasLayer/Popupdied" index="3"]

position = Vector2( 98, 328 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Popupdied" index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
"anims/New Anim" = SubResource( 5 )
blend_times = [  ]

[node name="left" type="TouchScreenButton" parent="CanvasLayer" index="5"]

position = Vector2( 34, 299 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 6 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="middle" type="TouchScreenButton" parent="CanvasLayer" index="6"]

position = Vector2( 111, 299 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 7 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="right" type="TouchScreenButton" parent="CanvasLayer" index="7"]

position = Vector2( 188, 299 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 6 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="HBoxContainer" type="Container" parent="CanvasLayer" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 185.0
margin_top = 3.0
margin_right = 234.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Sprite" type="Sprite" parent="CanvasLayer/HBoxContainer" index="0"]

scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite2" type="Sprite" parent="CanvasLayer/HBoxContainer" index="1"]

position = Vector2( 7, 3 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Container" type="Container" parent="CanvasLayer/HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 17.0
margin_right = 89.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -49.0
margin_top = 13.0
margin_right = -33.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "00"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="CanvasLayer/HBoxContainer/Container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -29.0
margin_top = 13.0
margin_right = -24.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "/"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label3" type="Label" parent="CanvasLayer/HBoxContainer/Container" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -20.0
margin_top = 13.0
margin_right = -4.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "20"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Popup2" type="Control" parent="CanvasLayer" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 1.0
margin_right = 41.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Node2D" parent="." index="1" instance=ExtResource( 14 )]

[connection signal="pressed" from="CanvasLayer/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]

[connection signal="pressed" from="CanvasLayer/Popup/back" to="Node2D" method="_on_back_pressed"]

[connection signal="pressed" from="CanvasLayer/Popup/back" to="." method="_on_back_pressed"]

[connection signal="pressed" from="CanvasLayer/Popuprestart/retry" to="Node2D" method="_on_retry_pressed"]

[connection signal="pressed" from="CanvasLayer/Popuprestart/retry" to="." method="_on_retry_pressed"]

[connection signal="pressed" from="CanvasLayer/Popuprestart/backtoui" to="Node2D" method="_on_backtoui_pressed"]

[connection signal="pressed" from="CanvasLayer/Popuprestart/backtoui" to="." method="_on_backtoui_pressed"]

[connection signal="pressed" from="CanvasLayer/Popupdied/backretry" to="Node2D" method="_on_backretry_pressed"]


[editable path="CanvasLayer/Popuprestart"]
[editable path="CanvasLayer/Popupdied"]
